# spreadsheet_extractor

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CD_pipeline.yml  CI_pipeline.yml  README.md
src/: README.md  configuration.md  development.md  pyproject.toml
src/spreadsheet_extractor/: __init__.py  cli.py  data_ranges.py  datasets.py  logger.py  settings.py  sources.py
src/spreadsheet_extractor/utils/: columns.py  dataframes.py  spreadsheets.py  utils.py
src/tests/: conftest.py  test_imports.py  test_sources.py  test_utils.py
src/tests/assets/extracts/Annuaire Statistique 2019/: 16.1 Indice des prix 2019.xlsx
src/tests/assets/extracts/Annuaire Statistique 2020/: 17.Indice des prix - S.A 2020.xlsx
src/tests/assets/extracts/Annuaire Statistique 2021/: 17.1 Indice des prix 2021.xlsx
src/tests/assets/extracts/Annuaire Statistique 2022/: 17. Indice des prix _AS 2022.xlsx
src/tests/assets/fixtures/: ipp.parquet
src/tests/assets/sources/: indice_des_prix.yaml
