[tool.poetry]
name = "spreadsheet-extractor"
version = "0.1.0"
description = "Write YAML to extract data from spreadsheet files"
authors = ["brocolidata <contact.brocolidata@gmail.com>"]
readme = "README.md"
packages = [{include = "spreadsheet_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.3.0"
openpyxl = "^3.1.2"
rarfile = "^4.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
