[project]
name = "spreadsheet-extractor"
version = "0.2.0"
description = "Write YAML to extract data from spreadsheet files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "rarfile>=4.2",
    "typer>=0.12.5",
]

[project.scripts]
spex = "spreadsheet_extractor.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
